# kleinladungstraeger

./: .woodpecker.yml  Cargo.toml  README.md  config-example.toml  recipe-clear.toml  recipe-debian.toml  recipe.toml
.github/workflows/: build-and-publish.yml
src/: app_layer.rs  config.rs  image_assembly.rs  kitchen.rs  main.rs  recipe.rs  registry_client.rs
src/image_assembly/: state.rs
tests/e2e/: main.rs  simple.toml
