[package]
name = "kleinladungstraeger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "klt"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
oci-spec = "0.7.1"
flate2 = "1.1.1"
tar = "0.4.44"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["std"] }
futures = "0.3.31"
miette = { version = "7.5", features = ["fancy"] }
bytes = "1.10.1"
toml = "0.8.20"
shellexpand = "3.1.1"
secrecy = { version = "0.8.0", features = ["serde"] }
better-panic = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
