[package]
name = "kleinladungstraeger"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "klt"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
oci-spec = "0.9.0"
flate2 = "1.1.9"
tar = "0.4.44"
sha2 = "0.10.9"
base16ct = { version = "1.0.0", features = ["alloc"] }
futures = "0.3.32"
miette = { version = "7.6", features = ["fancy"] }
bytes = "1.11.1"
toml = "1.0.3"
shellexpand = "3.1.2"
secrecy = { version = "0.10.3", features = ["serde"] }
better-panic = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
regex = "1.12.3"
serde_with = "3.17.0"
clap = { version = "4.5.60", features = ["derive"] }
nutype = { version = "0.6.2", features = ["serde", "regex"] }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.27.0"
test-log = { version = "0.2.19", features = ["trace"] }
testcontainers = "0.27.1"
wiremock = "0.6.5"
rcgen = "0.14"
