[package]
name = "kleinladungstraeger"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "klt"
path = "src/main.rs"

[dependencies]
base16ct = { version = "1.0.0", features = ["alloc"] }
better-panic = "0.3.0"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
futures = "0.3.32"
miette = { version = "7.6", features = ["fancy"] }
nutype = { version = "0.6.2", features = ["regex", "serde"] }
oci-spec = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.21.0"
sha2 = "0.11.0"
shellexpand = "3.1.2"
tar = "0.4.46"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
rcgen = "0.14"
temp-env = "0.3.6"
tempfile = "3.27.0"
test-log = { version = "0.2.21", features = ["trace"] }
testcontainers = "0.27.3"
wiremock = "0.6.5"
